<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView 
        android:id="@+id/tvAtiveUserRazao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:text="@string/ativarRazao"
        style="@style/banelAtivarRazao" 
        />
    
    <LinearLayout
        android:id="@+id/llAtiveUserLay1"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/distRazaoCredencial"
        android:layout_below="@+id/tvAtiveUserRazao"
        style="@style/itemLayout1"
        >
        <TextView 
            android:text="@string/enterNewPwd"
            style="@style/textDescrision"/>
        
        <EditText
            style="@style/pwdRead" android:id="@+id/ativarUtilizadorNovaSenha"/>
        
        <TextView
            android:text="@string/enterRepeatNewPwd"
            style="@style/textDescrision"/>
        
        <EditText
            style="@style/pwdRead"
            android:layout_marginBottom="0dp" android:id="@+id/ativarUtilizadorConfirmarSenha"/>
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/llAtiveUserLay1"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
	        android:text="@string/autentic"
	        style="@style/buttonSubmitSmall"
	        android:id="@+id/ativarUtilizadorBotao"
	        />
    </RelativeLayout>
    
    
 
</RelativeLayout>
